test_data/Xml/Unexpected/Unserializable/InvalidClassName/langStringShortNameTypeIec61360/wrong.xml.exception
Expected an element representing an instance of class LangStringShortNameTypeIec61360 with element name langStringShortNameTypeIec61360, but got: utterlyInvalid at: the beginning